--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* Add application styles & imports to this file! */
-
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css');
 body {
   background-color: grey;
 }
